# gmock_boilerplate_with_cmake

./: CMakeLists.txt  Dockerfile  README.md
src/: class_a.h  main.cpp  my_class.h
test/: mock_class_a.h  test_main.cpp
